...
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_to_oie_sample_description"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />

    <Button
...
