...
                android:text="@string/mock_scenarios"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/username_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_password"
                />

            <Button
...
